new code added to the system

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="#about" class="nav-link link-scroll">About</a></li>
               <li class="nav-item"><a href="#services" class="nav-link link-scroll">Work Experience</a></li>
-              <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li>
               <li class="nav-item"><a href="#references" class="nav-link link-scroll">My work</a></li>
               <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Clients</a></li>
               <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
@@ -66,9 +65,9 @@
         </header>
         <div class="row">
           <div data-animate="fadeInUp" class="col-lg-6">
-            <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
-            <p>Received overcame oh sensible so at an. Formed do change merely to county it. <strong>Am separate contempt</strong> domestic to to oh. On relation my so addition branched. Put hearing cottage she norland letters equally prepare too. Replied exposed savings he no viewing as up. Soon body add him hill. No father living really people estate if. Mistake do produce beloved demesne if am pursuit.</p>
-            <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
+            <p>Software engineer with 14+ years of experience in all stages of software development including architecting scalable distributed backend systems.</p>
+            <p>Developing data streaming pipeline to feed big data to AI-enabled systems.</p> 
+            <p>Developing and deploying production-ready systems in AWS and GCP, and creating prototypes and presenting to upper management.</p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-6">
             <div class="skill-item">
@@ -106,144 +105,50 @@
         <header class="text-center">
           <h2 data-animate="fadeInDown" class="title">Professional Experience</h2>
         </header>
-        <div class="row services text-center">
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-search"></i></div>
-            <h3 class="heading mb-3 text-400">Objectstream, Inc (Currently working here)</h3>
-            <p class="text-left description">On on produce colonel pointed. Just four sold need over how any. In to september suspicion determine he prevailed admitting. On adapted an as affixed limited on. Giving cousin warmly things no spring mr be abroad. Relation breeding be as repeated strictly followed margaret. One gravity son brought shyness waiting regular led ham.</p>
+        <div class="row services">
+          <div data-animate="fadeInUp" class="col-lg-12">
+            <h3 class="heading mb-3 text-400">Objectstream, Inc (Currently work here) : July 2019 to Present </h3>
+              <p>Architect SAAS product using domain-driven design and microservices</p>
+              <p>Configure and maintain Kafka cluster, AWS Fargate, and ECS</p>
+              <p>Create Kafka producer and consumer using Spring For Apache Kafka</p>
+              <p>Create REST API using NodeJS, Serverless Framework, and deploy to AWS Lambda.</p> 
+              <p>Research the most cost effective, yet powerful technologies that fit the needs of SAAS products and present to CEO and CTO.</p>
+              <p>Mentor teammates on product design, code implementation, and API creation.</p> 
+              <p>Presented to CEO about microservice architecture, pros and cons, and financial impact. •Resolved complex customer request and company roadblock by proposing and implementing integration of microservice with Google Drive API.</p>
+              <p>Built proof of concept for AI-enabled predictive maintenance system and deployed to
+                  SageMaker. This POC is in the pipeline to become a future SAAS product.</p>
+              <p>Built a proof of concept to capture ADS-B signal using Raspberry Pi, which streams data to Apache Kafka and displays flight position in real-time.</p> 
+              <p> Presented POC at the 2019 Air Traffic Control Association (ATCA) annual conference in Washington, D.C. • Built machine learning algorithm to predict flight delay</p>
           </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-html5"></i></div>
-            <h3 class="heading mb-3 text-400">HTML coding</h3>
-            <p class="text-left description">Manor we shall merit by chief wound no or would. Oh towards between subject passage sending mention or it. Sight happy do burst fruit to woody begin at. Assurance perpetual he in oh determine as.</p>
+
+          <div data-animate="fadeInUp" class="col-lg-12">
+            <h3 class="heading mb-3 text-400">Echo Energy : May 2018 - July 2019 </h3>
+              <p>Increased search speed by reducing SQL join queries and storing data in Elasticsearch</p>
+              <p>Integrated Apache Kafka with Spring Boot and microservices and deployed in Kubernetes</p>
+              <p>Guided teammate on proper design and code implementation of storing geolocation data
+                in Elasticsearch and display in Mapbox</p>
+              <p>Created Kafka source connectors and consumers for data streaming pipelines. 
+                <p>Presented new software product concept, API implementation strategy, and business
+                benefit to the CEO</p>
+              <p>Substantially reduced company cost by deprecating unused software, switching Kafka cloud providers, reducing EC2 instances in AWS, and eliminating duplicate code</p>
           </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
+
+          <div data-animate="fadeInUp" class="col-lg-12">
+            <h3 class="heading mb-3 text-400">MBO Partners : Januray 2016 - May 2018</h3>
+              <p>Designed and developed microservice using Spring Cloud Netflix and DDD</p>
+              <p>Built Spring Boot REST API and created unit tests using JUnit and Mockito</p>
+              <p>Built event-driven microservice using Spring AXON Framework </p>
+              <p>Created Kafka source connectors and consumers for data streaming pipelines </p>
+              <p>Built proof of concept of saga pattern for long running transactions</p>
+              <p>sed Spring Data as ORM tool for MongoDb, IBM DB2, and Elasticsearch</p>
           </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
-          </div>
+
         </div>
         <hr data-animate="fadeInUp">
         <div data-animate="fadeInUp" class="text-center">
           <p class="lead">Would you like to know more or just discuss something?</p>
           <p><a href="#contact" class="btn btn-outline-light link-scroll">Contact me</a></p>
         </div>
-      </div>
-    </section>
-    <!-- Testimonials-->
-    <section id="testimonials" class="testimonials-section bg-gray">
-      <div class="container">
-        <header class="text-center mb-2">
-          <h2 data-animate="fadeInUp" class="title">My customers said<br><span>about me</span></h2>
-          <p data-animate="fadeInUp" class="lead">I am always glad to hear that my customers leave satisfied. Some of them shared with you their insights on our cooperation.</p>
-        </header>
-        <ul data-animate="fadeInUp" class="owl-carousel owl-theme testimonials equalize-height">
-          <li class="item">
-            <div class="testimonial full-height">
-              <div class="text">
-                <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.</p>
-              </div>
-              <div class="bottom">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="name-picture"><img alt="" src="img/person-1.jpg">
-                  <h5>John McIntyre</h5>
-                  <p>CEO, TransTech</p>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="testimonial full-height">
-              <div class="text">
-                <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. &quot;What is happened to me? &quot; he thought. It was not a dream.</p>
-              </div>
-              <div class="bottom">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="name-picture"><img alt="" src="img/person-2.jpg">
-                  <h5>John McIntyre</h5>
-                  <p>CEO, TransTech</p>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="testimonial full-height">
-              <div class="text">
-                <p>His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame.</p>
-              </div>
-              <div class="bottom">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="name-picture"><img alt="" src="img/person-3.jpg">
-                  <h5>John McIntyre</h5>
-                  <p>CEO, TransTech</p>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="testimonial full-height">
-              <div class="text">
-                <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad.</p>
-              </div>
-              <div class="bottom">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="name-picture"><img alt="" src="img/person-4.jpg">
-                  <h5>John McIntyre</h5>
-                  <p>CEO, TransTech</p>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="testimonial full-height">
-              <div class="text">
-                <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad. Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad.</p>
-              </div>
-              <div class="bottom">
-                <div class="icon"><i class="fa fa-quote-left"></i></div>
-                <div class="name-picture"><img alt="" src="img/person-4.jpg">
-                  <h5>John McIntyre</h5>
-                  <p>CEO, TransTech</p>
-                </div>
-              </div>
-            </div>
-          </li>
-        </ul>
       </div>
     </section>
     <!-- Statistics-->
@@ -311,7 +216,7 @@
           <div id="references-masonry" data-animate="fadeInUp">
             <div class="row">
                   <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid">
+                    <div class="reference"><a href="#"><img src="img/obs.png" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
                             <h3 class="h4 reference-title">Project name</h3>
@@ -326,7 +231,7 @@
                     </div>
                   </div>
                   <div data-category="seo" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-2.jpg" alt="" class="img-fluid">
+                    <div class="reference"><a href="#"><img src="img/echo.jpeg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
                             <h3 class="h4 reference-title">Project name 2</h3>
@@ -341,7 +246,7 @@
                     </div>
                   </div>
                   <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-3.jpg" alt="" class="img-fluid">
+                    <div class="reference"><a href="#"><img src="img/mbo-logo@2x.png" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
                             <h3 class="h4 reference-title">Project name 3</h3>
@@ -356,7 +261,7 @@
                     </div>
                   </div>
                   <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-4.jpg" alt="" class="img-fluid">
+                    <div class="reference"><a href="#"><img src="img/gs.png" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
                             <h3 class="h4 reference-title">Project name 4</h3>
@@ -470,7 +375,7 @@
         </header>
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <form id="contact-form" method="post" action="">
+            <form id="contact-form" method="post" action="mailto:sourav.pati09@gmail.com">
               <div class="messages"></div>
               <div class="controls">
                 <div class="row">
