added more images

--- a/index.html
+++ b/index.html
@@ -362,16 +362,15 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 text-center" > 
-                <p> AWS Certified Solutions Architect</p> 
-                <p> DeepLearning and Nural Network</p>
-                <p>AI For Everyone</p>
+                <p> <a href="https://aw.certmetrics.com/amazon/public/verification.aspx"> AWS Certified Solutions Architect </a> <span>Credential IdentifierCredential ID LS7FZ6C1FB1Q1JK8</span></p> 
+                <p> <a href="https://www.coursera.org/account/accomplishments/records/WT6L9BW34WM8?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course"> DeepLearning and Nural Network </a></p>
+                <p> <a href="https://www.coursera.org/account/accomplishments/records/WT6L9BW34WM8?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course">AI For Everyone</a></p>
                 <p> Sun Certified Java Programmer</p>
               </div>
               <div class="col-lg-6 text-center" > 
                 <p> <a href="https://www.ingentaconnect.com/content/ben/cseng/2013/00000006/00000001/art00009"> Cloud Computing Security - Patent</a> </p> 
-                <p> Electronics and Telecommunication Engineering </p> 
-                <p> Biju Patnaik University of Technology </p>
-                <p> September 2001 -  April 2005 </p>
+                <p>  <a href="https://ieeexplore.ieee.org/abstract/document/7158627">Intelligent gateway for SCADA system security </a> </p> 
+                
               </div>
             </div>
           </div>
@@ -434,12 +433,12 @@
         </div>
         <!-- /.6-->
         <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-          <p>© 2018 Your name goes here. All rights reserved.</p>
+          <p>© 2020 Sourav Pati. All rights reserved.</p>
         </div>
         <div class="col-12 mt-4">
-          <p class="template-bootstrapious">Template by <a
-              href='https://bootstrapious.com/p/bootstrap-carousel'>Bootstrapious</a> & <a
-              href="https://fity.cz/ostrava">Fity</a></p>
+          <p class="template-bootstrapious"> <a
+              href='https://bootstrapious.com/p/bootstrap-carousel'></a> <a
+              href="https://fity.cz/ostrava"></a></p>
           <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
         </div>
       </div>
