changed certificate url

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               <div class="col-lg-6 text-center" > 
                 <p> <a href="https://aw.certmetrics.com/amazon/public/verification.aspx"> AWS Certified Solutions Architect </a> <span>Credential IdentifierCredential ID LS7FZ6C1FB1Q1JK8</span></p> 
                 <p> <a href="https://www.coursera.org/account/accomplishments/records/WT6L9BW34WM8?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course"> DeepLearning and Nural Network </a></p>
-                <p> <a href="https://www.coursera.org/account/accomplishments/records/WT6L9BW34WM8?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course">AI For Everyone</a></p>
+                <p> <a href="https://www.coursera.org/account/accomplishments/verify/39XMEHG734EC">AI For Everyone</a></p>
                 <p> Sun Certified Java Programmer</p>
               </div>
               <div class="col-lg-6 text-center" > 
